--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,13 @@ select {
   margin-bottom: 20px;
 }
 
+form {
+  margin: 20px;
+  background-color: lightblue;
+  padding: 10px;
+}
+
+p {
+  margin-left: 20px;
+  padding-top: 20px;
+}
